--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     width: 500px;
     border: 1px solid black;
     border-radius: 5px;
-    background-color: lightblue;
+    background-color: rgb(33, 151, 190);
     margin: auto;
     margin-top: 7.5%;
     display: flex;
@@ -63,9 +63,33 @@
     cursor: pointer;
 }
 
+.button-clicked {
+    animation: button-click-animation 0.2s;
+}
+  
+@keyframes button-click-animation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.95);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 body .reset {
-    background-color: lightblue;
+    background-color: rgb(33, 151, 190);
     border: none;
     margin: 0px;
     font-size: 16px;
+}
+
+.operator {
+    background-color: aqua;
+}
+
+#equal {
+    background-color: goldenrod;
 }
